chore/reformated the project